src/test/ui/use-nested-groups-unused-imports.stderr
error: unused imports: `*`, `Foo`, `baz::{}`, `foobar::*`
  --> $DIR/use-nested-groups-unused-imports.rs:26:11
   |
LL | use foo::{Foo, bar::{baz::{}, foobar::*}, *};
   |           ^^^        ^^^^^^^  ^^^^^^^^^   ^
   |
note: lint level defined here
  --> $DIR/use-nested-groups-unused-imports.rs:13:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: unused import: `*`
  --> $DIR/use-nested-groups-unused-imports.rs:28:24
   |
LL | use foo::bar::baz::{*, *};
   |                        ^

error: unused import: `use foo::{};`
  --> $DIR/use-nested-groups-unused-imports.rs:30:1
   |
LL | use foo::{};
   | ^^^^^^^^^^^^

error: aborting due to 3 previous errors

